--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="header-top-actions">
                     <select name="currency">
                         <option value="usd">USD &dollar;</option>
-                        <option value="eur">EUR &dollar;</option>
+                        <option value="eur">EUR €</option>
                     </select>
 
                     <select name="language">
