--- a/index.html
+++ b/index.html
@@ -71,7 +71,36 @@
         </div>
 
         <div class="header-main">
-            <div class="container"></div>
+            <div class="container">
+                <a href="index.html" class="header-logo">
+                    <img src="NEWS.png" alt="" width="120" height="30">
+                </a>
+                <div class="header-search-container">
+                    <input type="search" name="search" class="search-field" placeholder="Enter your Product Name">
+
+                    <button class="search-btn">
+                        <ion-icon name = "search-outline"></ion-icon>
+                    </button>
+                </div>
+                <a href="account.html">
+                    <button class="action-btn">
+                        <ion-icon name ="person-outline"></ion-icon>
+                    </button>
+                </a>
+
+                <a href="wishlist.html">
+                    <button class="action-btn">
+                        <ion-icon name ="heart-outline"></ion-icon>
+                    </button>
+                </a>
+
+                <a href="cart.html">
+                    <button class="action-btn">
+                        <ion-icon name ="bag-handle-outline"></ion-icon>
+                    </button>
+                </a>
+
+            </div>
         </div>
     </header>
 
