--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         <ion-icon name = "search-outline"></ion-icon>
                     </button>
                 </div>
+                <div class="header-user-action">
                 <a href="account.html">
                     <button class="action-btn">
                         <ion-icon name ="person-outline"></ion-icon>
@@ -99,9 +100,26 @@
                         <ion-icon name ="bag-handle-outline"></ion-icon>
                     </button>
                 </a>
-
+            </div>
             </div>
         </div>
+
+        <nav class="desktop-navigation-menu">
+
+            <div class="container">
+                <ul class="desktop-menu-category-list">
+                    <li class="menu-category">
+                        <a href="#" class="menu-title">Home</a>
+                    </li>
+
+                    <li class="menu-category">
+                        <a href="shop.html" class="menu-title">Categories</a>
+                    </li>
+
+
+                </ul>
+            </div>
+        </nav>
     </header>
 
 
