--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
 
                     <li class="menu-category">
                         <a href="shop.html" class="menu-title">Categories</a>
+
+                        <div class="dropdown-panel">
+
+                            <ul class="dropdown-panel-list">
+
+                                <li class="menu-title">
+                                    <a href="#">Apple Store</a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
 
 
