--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="header-main">
             <div class="container">
                 <a href="index.html" class="header-logo">
-                    <img src="NEWS.png" alt="" width="120" height="30">
+                    <img src="NEWS.png" alt="" width="100" height="100">
                 </a>
                 <div class="header-search-container">
                     <input type="search" name="search" class="search-field" placeholder="Enter your Product Name">
@@ -122,9 +122,108 @@
                                 <li class="menu-title">
                                     <a href="#">Apple Store</a>
                                 </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Mobile Phone</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Smartphone</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Earphone</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Headphones</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Power Banks</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Accessories</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Smart Device</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Speakers</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Cameras</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Projectors</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Storage Devices</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Applications</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Personal Care</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Home Care</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Car Accessories</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Case &amp; Covers</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Tools</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Exculsive Collections</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">New Arrivals</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Merchandise</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Keyboards</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Mouse</a>
+                                </li>
+
+                                <li class="menu-title">
+                                    <a href="#">Gift Cards</a>
+                                </li>
                             </ul>
                         </div>
                     </li>
+
+                    <li class="menu-category">
+                        <a href="shop.html" class="menu-title">Men's Clothing</a>
+
+                        <div class="dropdown-list">
+
+                            <ul class="dropdown-item">
 
 
                 </ul>
